@startuml koncept
' Schemat ER - Salon Samochodowy - Model Konceptualny
' Zgodny z BDBT.tex (8 głównych encji) i stylem Toad Data Modeler

skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 80
skinparam roundcorner 0
skinparam shadow false
skinparam defaultFontName Arial
skinparam defaultFontSize 11

' Stylizacja encji a la Toad
skinparam class {
    BackgroundColor #FFFFFF
    ArrowColor #000000
    BorderColor #000000
    HeaderBackgroundColor #D9D9D9
}
hide circle

' ============ 8 ENCJI GŁÓWNYCH (zgodnie ze sprawozdaniem) ============

entity "SALON" {
    *nr_salonu : PK
    --
    nazwa : UK
    -- adres (złożony) --
    ulica
    miasto
    kod_pocztowy
    --
    telefon
    email
}

entity "POJAZD" {
    *nr_vin : PK
    --
    rok_produkcji
    przebieg
    kolor
    cena_katalogowa
    stan
    status
    data_przyjecia
    uwagi
}

entity "MODEL_SAMOCHODU" {
    *id_modelu : PK
    --
    nazwa_modelu
    typ_nadwozia
    pojemnosc_silnika
    moc_km
    rodzaj_paliwa
    liczba_miejsc
    nazwa_producenta : UK
    kraj_pochodzenia
}

entity "KLIENT" {
    *nr_klienta : PK
    --
    typ_klienta
    -- dane osobowe --
    imie
    nazwisko
    pesel : UK
    -- dane firmowe --
    nazwa_firmy
    nip : UK
    -- adres (złożony) --
    ulica
    miasto
    kod_pocztowy
    --
    telefon
    email
    data_rejestracji
}

entity "PRACOWNIK" {
    *nr_pracownika : PK
    --
    imie
    nazwisko
    pesel : UK
    stanowisko
    data_zatrudnienia
    pensja_podstawowa
}

' Podtypy (Specjalizacja)
entity "SPRZEDAWCA" {
    --
    prowizja_procent
    limit_rabatu_procent
    liczba_sprzedazy
}

entity "SERWISANT" {
    --
    specjalizacja
    stawka_godzinowa
    <<multivalued>> certyfikaty
}

entity "SPRZEDAZ" {
    *nr_sprzedazy : PK
    --
    data_sprzedazy
    cena_sprzedazy
    cena_koncowa
    metoda_platnosci
    status
}

entity "WYPOSAZENIE" {
    *id_wyposazenia : PK
    --
    nazwa : UK
    kategoria
    dodatkowa_cena
}

' ============ ZWIĄZKI ============

' 1. SALON posiada POJAZD (1:M)
SALON ||..o{ POJAZD : "posiada"

' 2. SALON zatrudnia PRACOWNIK (1:M)
SALON ||..o{ PRACOWNIK : "zatrudnia"

' 3. MODEL jest instancją POJAZD (1:M)
MODEL_SAMOCHODU ||..|{ POJAZD : "jest_instancja"

' 4. KLIENT dokonuje SPRZEDAZ (1:M)
KLIENT ||..o{ SPRZEDAZ : "dokonuje"

' 5. PRACOWNIK (Sprzedawca) realizuje SPRZEDAZ (1:M)
SPRZEDAWCA ||..o{ SPRZEDAZ : "realizuje"

' 6. POJAZD jest przedmiotem SPRZEDAZ (1:1 / M:1)
POJAZD ||..o| SPRZEDAZ : "jest_przedmiotem"

' 7. POJAZD ma WYPOSAZENIE (M:N)
POJAZD }o..o{ WYPOSAZENIE : "ma_wyposazenie"

' 8. KLIENT rezerwuje POJAZD (Jazda testowa - M:N)
KLIENT }o..o{ POJAZD : "rezerwuje (TEST_DRIVE)"

' Hierarchia ISA
PRACOWNIK <|-- SPRZEDAWCA : "ISA (Overlapping)"
PRACOWNIK <|-- SERWISANT : "ISA (Overlapping)"

@enduml
